@@ -38,6 +38,7 @@
 <p>2015-03-05  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/xwd.c (ReadXWDImage): Fix memory leaks in error paths.</li>
 <li>coders/xpm.c (ReadXPMImage): Fix memory leaks in error paths.</li>
 <li>coders/miff.c (ReadMIFFImage): Fix memory leak of Image in error
 case.
